# django-http2-middleware

./: README.md  middleware.py  pyproject.toml
.github/workflows/: ci.yml
django_http2/: middleware.py  templatetags.py
django_http2/templatetags/: http2.py
